<resources>
    <string name="app_name">Rider</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">DONE</string>
    <string name="votre_taxi_en_un_clic">Your taxi \nin a few clicks</string>
    <string name="enter_nyour_information">Enter \nyour information</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="log_in">LOG IN</string>
    <string name="create_customer_account">CREATE CUSTOMER ACCOUNT</string>
    <string name="create_driver_account">CREATE DRIVER ACCOUNT</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="confirm_password">Confirm the password</string>
    <string name="send">SEND</string>
    <string name="already_registered">ALREADY REGISTERED, CONNECT</string>
    <string name="email">Email</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_favorite_name">Enter the name for your favorite ride</string>
    <string name="enter_a_good_phone_number">Enter a good phone number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_vehicle_brand">Enter your vehicle brand</string>
    <string name="enter_your_vehicle_model">Enter your vehicle model</string>
    <string name="enter_your_vehicle_color">Enter your vehicle color</string>
    <string name="enter_your_vehicle_numberplate">Enter your vehicle number plate</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="enter_a_goog_phone_number">Enter a good phone number</string>
    <string name="passwor_requires_at_least_characters">Password requires at least 8 characters</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="modifie">Amended</string>
    <string name="Echec_de_modification">Failed to edit</string>
    <string name="current_password_incorrect">Current password is incorrect</string>
    <string name="enter_your_current_password">Enter your current password</string>
    <string name="reserve_a_taxi">Reserve a taxi</string>
    <string name="create_an_account">Create an account, choose a ride, receive a confirmation of your ride, make your ride, pay and note the driver.</string>
    <string name="messaging">Messaging</string>
    <string name="communicate_to_any_driver_by_calling_or_writing_a_message">Communicate to any driver by calling or writing a message.</string>
    <string name="password_requires">Password requires at least 8 characters</string>
    <string name="my_status">My status</string>
    <string name="please_wait">Waiting please</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="modification_d_information">Change information</string>
    <string name="enregistrer">SAVE</string>
    <string name="t_l_phone">Phone</string>
    <string name="pas_de_connexion_internet">No internet connection</string>
    <string name="mot_de_passe_actuel">Current Password</string>
    <string name="nouveau_mot_de_passe">New Password</string>
    <string name="confirmez_le_nouveau_mot_de_passe">Confirm the new password</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_exactly_place">Enter your exactly place</string>
    <string name="enter_your_number_of_people">Enter number of people</string>
    <string name="enter_a_number_greater_than">Enter a number greater than 0</string>
    <string name="mot_de_passe_non_identiques">No identical password</string>
    <string name="return_time">Return time</string>
    <string name="enter_your_firstname">Enter your first name</string>
    <string name="enter_amount">Enter amount</string>
    <string name="choose_return_date_time">Choose return date and time</string>
    <string name="item_home">Home</string>
    <string name="item_logout">Sign out</string>
    <string name="item_contact_us">Contact us</string>
    <string name="item_help">Help and assistance</string>
    <string name="item_new">New</string>
    <string name="item_favorite">Favorite ride</string>
    <string name="item_profile">My profile</string>
    <string name="item_wallet">My wallet</string>
    <string name="item_new_booking">New booking</string>
    <string name="item_confirmed_booking">Confirmed booking</string>
    <string name="item_canceled_booking">Canceled booking</string>
    <string name="item_louer_vehicule">Rent a vehicle</string>
    <string name="item_vehicule_loue">Rented vehicle</string>
    <string name="today">Today</string>
    <string name="item_onride">On ride</string>
    <string name="item_completed">Completed</string>
    <string name="item_canceled">Canceled</string>
    <string name="item_confirmed">Confirmed</string>
    <string name="this_account_does_not_exist">This account does not exist</string>
    <string name="enter_another_phone_number">Enter another phone number</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="enter_another_password">Enter another password</string>
    <string name="this_account_is_inactive">This account is inactive. Your information is being processed</string>
    <string name="depart">Departure</string>
    <string name="where_do_you_going">Where do you want to go ?</string>
    <string name="point_de_depart">Starting point</string>
    <string name="destination">Destination</string>
    <string name="you_want_to_go_here">You want to go here</string>
    <string name="your_starting_point">Your starting point</string>
    <string name="echec_denvoi">Failed to send</string>
    <string name="disponible">Available</string>
    <string name="indisponible">Unavailable</string>
    <string name="annule_avec_succes">Canceled successfully</string>
    <string name="echec_dannulation">Failed to cancel</string>
    <string name="assurez_vous_d_tre_connecter_internet_et_tapez_sur_les_nuages">Make sure you connect to the internet and tap the clouds</string>
    <string name="pas_de_v_hicule_pour_le_moment">No vehicle at the moment</string>
    <string name="information_sur_la_r_servation">Booking Information</string>
    <string name="total_payer">Total to pay</string>
    <string name="nombre_de_jour">Number of days</string>
    <string name="date_d_but">Start date</string>
    <string name="date_fin">End date</string>
    <string name="contact">Contact</string>
    <string name="envoyer">SEND</string>
    <string name="annuler">CANCEL</string>
    <string name="envoyer_avec_succes">Sent successfully</string>
    <string name="close">CLOSE</string>
    <string name="do_you_want_to_accept_this_ride">Do you want to accept this ride?</string>
    <string name="paiement_par_cash">Cash</string>
    <string name="m_thode_de_paiement">Method of payment</string>
    <string name="heure_d_part">Departure time</string>
    <string name="the_request_has_been_successfully_validated">The request has been successfully validated</string>
    <string name="distance">Distance</string>
    <string name="dur_e">Duration</string>
    <string name="co_t">Cost</string>
    <string name="book">ORDER NOW</string>
    <string name="book_now">BOOK NOW</string>
    <string name="book_later">BOOK RIDE</string>
    <string name="cancel">CANCEL</string>
    <string name="validation_failure">Validation failure</string>
    <string name="rating_awarded_successfully">Rating awarded successfully</string>
    <string name="failed_to_assign">Failed to assign</string>
    <string name="failed_to_edit">Failed to edit</string>
    <string name="save">SAVE</string>
    <string name="make_sure_you_connect_to_the_internet_and_tap_cloud">Make sure you connect to the internet and tap the clouds</string>
    <string name="no_ride_at_the_moment">No ride at the moment</string>
    <string name="no_favorite_ride_at_the_moment">No favorite ride at the moment</string>
    <string name="no_ride_canceled_at_the_moment">No ride canceled at the moment</string>
    <string name="no_review_at_the_moment">No review</string>
    <string name="no_ride_completed_at_the_moment">No ride completed at the moment</string>
    <string name="no_ride_confirmed_at_the_moment">No ride confirmed at the moment</string>
    <string name="no_ride_on_ride_at_the_moment">No ride on ride at the moment</string>
    <string name="your_booking_as_been_sent_successfully">Your booking has been sent successfully</string>
    <string name="an_error_occurred_while_sending_your_booking">An error occurred while sending your booking</string>
    <string name="this_service_requires_the_activation_of_the_gps">This service requires the activation of the GPS service. Do you want to activate GPS?</string>
    <string name="failed_try_again">Failed, try again</string>
    <string name="model">Model</string>
    <string name="brand">Brand</string>
    <string name="color">Color</string>
    <string name="no_drivers_yet">No drivers yet</string>
    <string name="choose_a_rider">Choose a driver</string>
    <string name="choose_a_payment_method">Choose a payment method</string>
    <string name="reject">REJECT</string>
    <string name="deleted_successfull">Deleted Successfully</string>
    <string name="canceled_successfull">Canceled Successfully</string>
    <string name="transaction_successfull">Transaction successfully</string>
    <string name="rejected_successfull">Rejected Successfully</string>
    <string name="confirmed_successfull">Confirmed Successfully</string>
    <string name="on_ride_successfull">On Ride Successfully</string>
    <string name="completed_successfull">Completed Successfully</string>
    <string name="do_you_want_to_cancel_your_request">Do you want to cancel your ride?</string>
    <string name="do_you_want_to_delete_this_request">Do you want to delete this favorite ride?</string>
    <string name="do_you_want_to_confirm_this_ride">Do you want to confirm this ride?</string>
    <string name="do_you_want_to_confirm_this_booking">Do you want to confirm this booking?</string>
    <string name="do_you_want_to_on_ride_this_ride">Do you want to on ride this ride?</string>
    <string name="do_you_want_to_reject_this_ride">Do you want to reject this ride?</string>
    <string name="do_you_want_to_reject_this_booking">Do you want to reject this booking?</string>
    <string name="do_you_want_to_complete_this_ride">Do you want to complete this ride?</string>
    <string name="vehicle_information">Vehicle information</string>
    <string name="number_plate">Number plate</string>
    <string name="your_information_was_sent_well_we_will_treat_them_and_inform_you_after_the_treatment_your_account_will_be_active_after_validation_of_your_information">Your information was sent well. We will treat them and inform you after the treatment. Your account will be active after validation of your information</string>
    <string name="payment_amount">Payment amount</string>
    <string name="payment_methode">Payment method</string>
    <string name="payment_made_successfully">Payment made successfully</string>
    <string name="you_need_to_install_google_map_app">You need to install the google map application</string>
    <string name="total_cost">Total cost</string>
    <string name="days">Days</string>
    <string name="apply">APPLY</string>
    <string name="add_to_favorite">ADD FAVORITE</string>
    <string name="specify_exactly_your_location">Specify your exact location</string>
    <string name="number_of_people">Number of person</string>
    <string name="choose_your_vehicle_type">Choose Your Vehicle Type</string>
</resources>