<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<ImageView-->
        <!--android:padding="5dp"-->
        <!--android:id="@+id/cancel"-->
        <!--app:srcCompat="@drawable/quantum_ic_clear_grey600_24"-->
        <!--android:layout_gravity="right"-->
        <!--android:layout_width="30dp"-->
        <!--android:layout_height="30dp"/>-->

        <LinearLayout
            android:visibility="gone"
            android:background="@drawable/custom_cash"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_weight="3"
                android:tint="@color/colorYellowDark"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_payment_cash"
                android:layout_gravity="right"
                android:layout_width="match_parent"
                android:layout_height="55dp"/>

            <LinearLayout
                android:layout_weight="1"
                android:gravity="center|left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:textColor="@color/colorLogoBlack"
                    android:gravity="bottom"
                    android:text="@string/paiement_par_cash"
                    android:layout_marginLeft="5dp"
                    android:singleLine="true"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:gravity="bottom"
                    android:text="@string/m_thode_de_paiement"
                    android:layout_marginLeft="5dp"
                    android:singleLine="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_gravity="center"
            android:id="@+id/line_divider_driver"
            android:visibility="gone"
            android:layout_width="70dp"
            android:layout_height="2dp"
            android:layout_below="@+id/linear"
            android:background="@color/colorLogoBlack"/>

        <RelativeLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <ImageView
                android:background="@drawable/custom_cash"
                android:padding="1.5dp"
                android:scaleType="centerCrop"
                android:id="@+id/trajet_ride"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ProgressBar
                android:indeterminateTint="@color/colorLogoBlack"
                android:layout_centerInParent="true"
                android:id="@+id/progressBar_ride"
                style="?android:attr/progressBarStyle"
                android:layout_width="35dp"
                android:layout_height="35dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center|left">

                <ImageView
                    android:paddingTop="5dp"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:tint="@color/colorYellowDark"
                    app:srcCompat="@drawable/distance" />

                <TextView
                    android:textAllCaps="true"
                    android:layout_marginTop="0dp"
                    android:gravity="bottom"
                    android:text="@string/distance"
                    android:layout_weight="5"
                    android:layout_marginLeft="5dp"
                    android:singleLine="true"
                    android:textSize="23sp"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center|left">

                <TextView
                    android:gravity="right"
                    android:layout_marginTop="0dp"
                    android:text=""
                    android:layout_weight="5"
                    android:layout_marginLeft="5dp"
                    android:singleLine="true"
                    android:textSize="20dp"
                    android:id="@+id/distance_requete"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center|left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:id="@+id/intput_layout_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:drawableTint="@color/colorLogoBlack"
                    android:drawableRight="@drawable/ic_location_pin_"
                    android:hint="@string/specify_exactly_your_location"
                    android:textSize="20sp"
                    android:id="@+id/input_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:id="@+id/intput_layout_people_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:drawableTint="@color/colorLogoBlack"
                    android:drawableRight="@drawable/ic_team"
                    android:maxLength="2"
                    android:hint="@string/number_of_people"
                    android:textSize="20sp"
                    android:id="@+id/people_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:background="@drawable/background_gray"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/colorLogoBlack"
                android:layout_marginTop="0dp"
                android:text="@string/choose_your_vehicle_type"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="5dp"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_category_vehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:clipToPadding="false" />

            <ProgressBar
                android:indeterminateTint="@color/colorLogoBlack"
                android:layout_margin="20dp"
                android:layout_centerInParent="true"
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="35dp"
                android:layout_height="35dp" />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center|left">

                <ImageView
                    android:tint="@color/colorYellowDark"
                    app:srcCompat="@drawable/ic_time_outline"
                    android:layout_gravity="center"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <TextView
                    android:layout_marginTop="7dp"
                    android:gravity="bottom"
                    android:text="@string/dur_e"
                    android:layout_weight="5"
                    android:layout_marginLeft="5dp"
                    android:singleLine="true"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center|left">

                <TextView
                    android:gravity="right"
                    android:layout_marginTop="7dp"
                    android:text=""
                    android:layout_weight="5"
                    android:layout_marginLeft="5dp"
                    android:singleLine="true"
                    android:textSize="18sp"
                    android:id="@+id/duree_requete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center|left">

                <ImageView
                    android:tint="@color/colorYellowDark"
                    app:srcCompat="@drawable/ic_money"
                    android:layout_gravity="center"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <TextView
                    android:layout_marginTop="7dp"
                    android:gravity="bottom"
                    android:text="@string/co_t"
                    android:layout_weight="5"
                    android:layout_marginLeft="5dp"
                    android:singleLine="true"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center|left">

                <TextView
                    android:gravity="right"
                    android:layout_marginTop="7dp"
                    android:text=""
                    android:layout_weight="5"
                    android:layout_marginLeft="5dp"
                    android:singleLine="true"
                    android:textSize="18sp"
                    android:id="@+id/cout_requete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left"
            android:layout_marginTop="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingBottom="30dp">

            <TextView
                android:visibility="visible"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_centerHorizontal="true"
                android:cursorVisible="false"
                android:gravity="center"
                android:textSize="@dimen/buttonTextSize"
                android:id="@+id/add_favorite"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/custom_button"
                android:text="@string/add_to_favorite"
                android:textColor="@color/colorLogoBlack"/>

            <TextView
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/buttonTextSize"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/custom_button_second"
                android:layout_alignParentRight="true"
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>